force-app/main/default/objects/Check_X_Plan_Product__c/Check_X_Plan_Product__c.object-meta.xml
<CustomObject>
    <label>Check X Plan Product</label>
    <nameField>
        <label>Check X Plan Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Check X Plan Products</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>