force-app/main/default/objects/Check_X_Plan_Product__c/fields/Brand__c.field-meta.xml
<CustomField>
    <fullName>Brand__c</fullName>
    <label>Brand</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Sharp</fullName>
            </value>
            <value>
                <fullName>Hisense</fullName>
            </value>
            <value>
                <fullName>SAMSUNG</fullName>
            </value>
            <value>
                <fullName>LG</fullName>
            </value>
            <value>
                <fullName>Haier</fullName>
            </value>
            <value>
                <fullName>Midea</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>