force-app/main/default/objects/Check_X_Plan_Product__c/fields/Check_X_Plan__c.field-meta.xml
<CustomField>
    <fullName>Check_X_Plan__c</fullName>
    <label>Check X Plan</label>
    <referenceTo>Check_X_Plan__c</referenceTo>
    <relationshipLabel>Check X Plan Products</relationshipLabel>
    <relationshipName>Check_X_Plan_Products</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>