force-app/main/default/objects/Check_X_Plan_Product__c/fields/Series__c.field-meta.xml
<CustomField>
    <fullName>Series__c</fullName>
    <label>Series</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>连续</fullName>
            </value>
            <value>
                <fullName>Below A6</fullName>
            </value>
            <value>
                <fullName>A6</fullName>
            </value>
            <value>
                <fullName>A7</fullName>
            </value>
            <value>
                <fullName>A8</fullName>
            </value>
            <value>
                <fullName>E7</fullName>
            </value>
            <value>
                <fullName>Q6</fullName>
            </value>
            <value>
                <fullName>Q7</fullName>
            </value>
            <value>
                <fullName>QD6</fullName>
            </value>
            <value>
                <fullName>S7</fullName>
            </value>
            <value>
                <fullName>U6</fullName>
            </value>
            <value>
                <fullName>U7</fullName>
            </value>
            <value>
                <fullName>U8</fullName>
            </value>
            <value>
                <fullName>UX</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>