force-app/main/default/objects/Check_X_Plan_Product__c/fields/Series_Competitive__c.field-meta.xml
<CustomField>
    <fullName>Series_Competitive__c</fullName>
    <label>Series</label>
    <length>255</length>
    <type>Text</type>
</CustomField>