force-app/main/default/objects/Check_X_Plan_Product__c/fields/Size__c.field-meta.xml
<CustomField>
    <fullName>Size__c</fullName>
    <label>Size</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>55</fullName>
            </value>
            <value>
                <fullName>Below 55</fullName>
            </value>
            <value>
                <fullName>58</fullName>
            </value>
            <value>
                <fullName>65</fullName>
            </value>
            <value>
                <fullName>70</fullName>
            </value>
            <value>
                <fullName>75</fullName>
            </value>
            <value>
                <fullName>85</fullName>
            </value>
            <value>
                <fullName>98</fullName>
            </value>
            <value>
                <fullName>100</fullName>
            </value>
            <value>
                <fullName>110</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>